--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,120 @@
-@import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+
+:root {
+  --background: #eee;
+}
+
+
+html{
+  margin: 10px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+  /* nav > *{
+    border: 1px solid red;
+
+  } */
+
+nav{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px 15px 1px 1px;
+  /* position: fixed; */
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  background-color: rgb(255, 255, 255);
+  z-index: 1000;
+  /* transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out; */
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Libertinus Serif", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* .logos{
+
+} */
+
+.links{
+  display: flex;
+  justify-content: center;
+}
+
+.links ul {
+  display: flex;
+  text-decoration: none;
+  list-style-type: none;
+  gap: 20px;
+}
+
+.links ul li *{
+  display: flex;
+  text-decoration: none;
+  color: black;
+  transition: 0.5s;
+  font-family: "Libertinus Serif", serif;
+
+}
+
+.links ul li *:hover{
+  transform: scale(1.1);
+}
+
+
+
+header{
+  display: flex;
+  flex-direction: column;
+  background-image: url("/bg7.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 0 4px 6px 10px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 15px;
+  min-height: 95vh;
+  position: relative;
+}
+
+header::before {
+  content: "";
+  position: absolute;
+  top: 132.5px;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(to bottom, rgb(255, 255, 255), transparent);
+  z-index: 2;
+  pointer-events: none;
+}
+
+
+
+/* nav.scrolled {
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+nav.scrolled .links a, nav.scrolled .title h1 {
+  color: black;
+}
+
+nav .links a, nav .title h1 {
+  color: white;
+  transition: color 0.3s ease-in-out;
+} */
