--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,3 +118,96 @@ nav .links a, nav .title h1 {
   color: white;
   transition: color 0.3s ease-in-out;
 } */
+
+.header-transition {
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.header-hidden {
+  opacity: 0;
+  transform: translateY(-20px); /* Commence légèrement au-dessus */
+}
+
+.header-visible {
+  opacity: 1;
+  transform: translateY(0); /* Position finale */
+}
+
+/* Styles pour le LoadingScreen */
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* S'assure qu'il est au-dessus de tout */
+  background-color: #fff; /* Couleur de fond par défaut si l'image ne charge pas */
+  transition: opacity 0.5s ease-out;
+}
+
+.loading-screen.hidden {
+  opacity: 0;
+  pointer-events: none; /* Permet de cliquer à travers une fois caché */
+}
+
+.loading-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Place l'image en arrière-plan */
+}
+
+.loading-content {
+  color: white; /* Couleur du texte de chargement */
+  font-size: 2rem;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
+
+/* Styles pour le contenu principal */
+.content-wrapper {
+  transition: opacity 0.5s ease-in;
+}
+
+.content-wrapper.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.content-wrapper.visible {
+  opacity: 1;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1.154;
+  display: grid;
+  color: #000; /* Couleur du loader */
+  background:
+    linear-gradient(to bottom left ,#0000 calc(50% - 1px),currentColor 0 calc(50% + 1px),#0000 0) right/50% 100%,
+    linear-gradient(to bottom right,#0000 calc(50% - 1px),currentColor 0 calc(50% + 1px),#0000 0) left /50% 100%,
+    linear-gradient(currentColor 0 0) bottom/100% 2px;
+  background-repeat: no-repeat;
+  transform-origin: 50% 66%;
+  animation: l5 4s infinite linear;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  background: inherit;
+  transform-origin: inherit;
+  animation: inherit;
+}
+.loader::after {
+  animation-duration: 2s;
+}
+ @keyframes l5{
+  100% {transform:rotate(1turn)}
+}
